# lexi-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
example/: main.cc
src/: builder.cc  builder.hh  cmd.hh  lexer.cc  lexer.hh  lexi.cc  lexi.hh  lexi_data.cc  lexi_data.hh  lexitype.hh  multi.cc  multi.hh  networking.cc  networking.hh  parser.cc  parser.hh  socket.cc  socket.hh  token.hh
tests/: CMakeLists.txt  builder_test.cc  lexer_test.cc  parser_test.cc
